resolve align deformation

--- a/app/static/css/workbook.css
+++ b/app/static/css/workbook.css
@@ -21,9 +21,6 @@ h1 {
 }
 
 
-main {
-    text-align: center;
-}
 
 .layout-landing {
   padding: 0 16px 0;
